adaptive layout bug fix

--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -28,8 +28,9 @@
 
 @media screen and (max-width: 1220px) {
 	.header {
-		max-width: 800px;
 		min-height: 60px;
+		max-width: 1000px;
+        margin: 0 auto 0 auto;
 	}
 }
 
