--- a/src/blocks/purpose/purpose.css
+++ b/src/blocks/purpose/purpose.css
@@ -23,7 +23,7 @@
 		max-width: 635px;
 		font-size: 18px;
 		line-height: 22px;
-		margin-left: 70px;
+		
 	}
 }
 
